[gd_scene load_steps=4 format=3 uid="uid://dyg2ndjaaxbbe"]

[ext_resource type="Script" uid="uid://co1hv0g8j8r67" path="res://Scripts/light_source.gd" id="1_u0qyg"]
[ext_resource type="Texture2D" uid="uid://d2uhikpas8u7s" path="res://Others/light.png" id="3_ochtu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rr5ik"]
radius = 103.01942

[node name="PointLight2D" type="PointLight2D"]
energy = 0.8
shadow_enabled = true
texture = ExtResource("3_ochtu")
texture_scale = 0.02
script = ExtResource("1_u0qyg")

[node name="LightSource" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="LitArea" type="CollisionShape2D" parent="LightSource"]
z_index = -1
shape = SubResource("CircleShape2D_rr5ik")

[node name="RayCast2D" type="RayCast2D" parent="LightSource"]
collide_with_areas = true

[connection signal="body_entered" from="LightSource" to="." method="_on_light_source_body_entered"]
[connection signal="body_exited" from="LightSource" to="." method="_on_light_source_body_exited"]
